--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "bootstrap-sass-official": "~3.2.0",
-    "eonasdan-bootstrap-datetimepicker": "4.7.14"
+    "eonasdan-bootstrap-datetimepicker": "4.7.14",
+    "handlebars": "3.0.3"
   }
 }
