add slider and css decoration

--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "bootstrap-sass-official": "~3.2.0",
     "eonasdan-bootstrap-datetimepicker": "4.7.14",
-    "handlebars": "3.0.3"
+    "handlebars": "3.0.3",
+    "seiyria-bootstrap-slider": "4.8.1"
   }
 }
